--- a/style.css
+++ b/style.css
@@ -1,4 +1,67 @@
-#container{
+body {
+    background-color: black;
+    font-family: sans-serif;
+    color: white;
+    margin: 0;
+    padding: 0;
+  }
+  
+  h1 {
+    text-align: center;
+    margin: 20px 0;
+  }
+  
+  input {
+    display: block;
+    margin: 0 auto 20px;
+    padding: 10px;
+    border-radius: 6px;
+    border: none;
+    width: 80%;
+    max-width: 400px;
+  }
+  
+  #container {
+    padding: 22px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-}
+    gap: 20px;
+    justify-items: center;
+  }
+  
+  #container > div {
+    background-color: white;
+    color: black;
+    border-radius: 12px;
+    width: 200px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 16px;
+    text-align: center;
+  }
+  #container > div > p {
+    padding: 0;
+    margin: 0;
+  }
+  
+  #container > div > img {
+    width: 200px;
+    border-radius: 8px;
+  }
+  
+  @media (max-width: 500px) {
+    #container {
+      grid-template-columns: 1fr;
+      padding: 10px;
+    }
+  
+    #container > div {
+      width: 100%;
+    }
+  
+    #container > div > img {
+      width: 90%;
+    }
+  }
+  
